force-app/main/default/objects/Opportunity_Product_Seller__c/Opportunity_Product_Seller__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Seller</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Opportunity Product Seller Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Sellers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>