force-app/main/default/objects/Opportunity_Product_Seller__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product Sellers</relationshipLabel>
    <relationshipName>Opportunity_Product_Sellers</relationshipName>
    <type>Lookup</type>
</CustomField>